added basic template for the sing up form

--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="top">
+        <img src="./images/dino-reichmuth-d6yDSisNi4w-unsplash.jpg" alt="">
+    </header>
 
-
+    <main class="contain">
+        <form method="post">
+            <div class="left-side">
+                <label for="fName">First Name</label><input type="text" name="fName" id="">
+                <label for="LName">Last Name</label><input type="text" name="LName" id="">
+                <label for="email">Email</label><input type="email" name="email" id="">
+            </div>
+            <div class="right-side">
+                <label for="phoneNum">Phone Number</label><input type="number" name="phoneNum" id="">
+                <label for="passcode">Password</label><input type="password" name="passcode" id="">
+                <label for="confirmPass">Confirm Password</label><input type="password" name="confirmPass" id="">
+            </div>
+        </form>
+    </main>
     <script src="./script.js"></script>
 </body>
 </html>
